Fix googleapi not appearing in page, then fix menu button styling/positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,14 @@
     background-color: #525252;
 }
 
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
@@ -361,6 +369,11 @@ button[type="submit"] {
     margin-bottom: 20px;
     color: #fafafa;
     background-color: #e84610;
+}
+
+/* -----Google API----- */
+div#map {
+    min-height: 360px;
 }
 
 /* -----Media Queries----- */
